--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-router-hash-link": "^2.4.3",
+    "swiper": "^11.2.7",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
